2012-06-13  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-utils.c (rfc2047_encode_get_rfc822_words): When
	breaking up really long atom tokens, change the word type to
	RFC2047 so that we encode them, thus preventing forced header
	folding which cannot be unmunged.
	(header_fold): Fixed for cases where the first word in a header is
	68 chars. (Note: this fix is largely unnecessary due to the above fix)

2012-06-13  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-message.c: When setting a header, make sure to
	always clear the header list cache of the toplevel mime_part as
	well.

2012-06-13  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-param.c (rfc2184_param_new): Only decode the charset
	and lang if the parameter is actually encoded. Thanks to Peter
	Bloomfield for this patch.

2012-04-12  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-parser.c (parser_scan_headers): Make sure to
	initialize 'start' before using it to calculate headers_end in the
	case where parser_fill() failed.

	Fixes bug #673493.

2012-02-20  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-common.c (g_mime_strdup_trim): Optimized.

	* gmime/gmime-parser.c (header_parse): Use g_mime_strdup_trim()
	instead of reimplementing the same logic here.

2012-02-19  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-encodings.c (g_mime_content_encoding_from_string):
	Match non-standard encodings: 7-bit, 8-bit, and x-uue (the
	standard names for these are 7bit, 8bit, and x-uuencode).

2012-02-19  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-common.c (g_mime_strdup_trim): New function that
	optimizes g_strstrip combined with g_strdup in both speed and
	memory usage (g_strstrip won't shrink the size of the dup'd
	memory).

2012-02-18  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.in: Bumped version to 2.4.32

	* build/vs2008/gmime.vcproj: Bumped version.

2012-02-18  Jeffrey Stedfast  <fejj@gnome.org>

	* src/uuencode.c: